# NUEDC_Test

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  findings.md  progress.md  task_plan.md
airborne_computer/: CMakeLists.txt
airborne_computer/ros2/nuedc_bridge/: CMakeLists.txt  README.md  package.xml
airborne_computer/ros2/nuedc_bridge/launch/: nuedc_bridge.launch.py
airborne_computer/ros2/nuedc_bridge/proto/: messages.proto
airborne_computer/ros2/nuedc_bridge/src/: bridge_conversions.cpp  nuedc_bridge_node.cpp
airborne_computer/ros2/nuedc_bridge/test/: test_bridge_conversions.cpp
airborne_computer/src/: airborne_runtime.cpp  airborne_runtime.h  command_server.cpp  command_server.h  h_problem_mission_runtime.h  main.cpp  mission_runtime_factory.cpp  mission_runtime_factory.h
airborne_computer/tests/: test_airborne_runtime.cpp
ground_station/: CMakeLists.txt
ground_station/src/: grid_mapper.cpp  grid_mapper.h  grid_scene.cpp  main_window.cpp  main_window.h  mission_plan_bridge.cpp  mission_plan_bridge.h  planning_state_machine.cpp  route_validator.cpp  route_validator.h
ground_station/tests/: test_detection_repository.cpp  test_grid_mapper.cpp  test_grid_scene.cpp  test_main_window.cpp
ground_station_computer/: CMakeLists.txt
ground_station_computer/src/app/: main.cpp  main_window.cpp  main_window.h
ground_station_computer/src/framework/communication/: command_link_health.cpp  command_link_health.h  command_link_monitor.cpp  command_link_monitor.h  envelope_codec.cpp  envelope_codec.h  message_dispatcher.cpp  message_dispatcher.h  reliable_command_client.cpp  reliable_command_client.h  serialized_command_transport.cpp  serialized_command_transport.h  zmq_command_client.cpp  zmq_command_client.h  zmq_subscriber_worker.cpp  zmq_subscriber_worker.h
ground_station_computer/src/framework/config/: network_config.cpp  repository_paths.cpp  repository_paths.h
ground_station_computer/src/framework/runtime/: airborne_sync_state.cpp  airborne_sync_state.h  mission_runtime_state.cpp  mission_runtime_state.h
ground_station_computer/src/framework/storage/: mission_plan_store.cpp  mission_plan_store.h
ground_station_computer/src/framework/task/: competition_task_adapter.h  competition_task_registry.cpp  competition_task_registry.h
ground_station_computer/src/h_problem/: h_problem_adapter_registration.h
ground_station_computer/src/h_problem/mission/: h_mission_command_service.cpp  h_mission_command_service.h  h_mission_controller.cpp  h_mission_controller.h  h_mission_load_adapter.cpp  h_mission_load_adapter.h  h_mission_view_sink.h  h_no_fly_planning_state.cpp  h_protocol_adapter.cpp  h_protocol_adapter.h  h_route_planner_bridge.cpp  h_route_planner_bridge.h
ground_station_computer/src/h_problem/rules/: h_grid_mapper.cpp  h_grid_mapper.h  h_no_fly_zone_rules.cpp  h_no_fly_zone_rules.h  h_route_validator.cpp  h_route_validator.h
ground_station_computer/src/h_problem/storage/: h_detection_repository.cpp  h_detection_repository.h  h_mission_plan_store.cpp
ground_station_computer/src/h_problem/ui/: h_grid_scene.cpp  h_grid_scene.h  h_problem_page.cpp  h_problem_page.h  h_problem_view.cpp  h_problem_view.h  h_route_visualizer.cpp  h_route_visualizer.h
ground_station_computer/tests/: test_airborne_sync_state.cpp  test_architecture_boundaries.cpp  test_command_link_health.cpp  test_command_link_monitor.cpp  test_detection_repository.cpp  test_envelope_codec.cpp  test_grid_mapper.cpp  test_grid_scene.cpp  test_h_mission_controller.cpp  test_h_protocol_adapter.cpp  test_main_window.cpp  test_mission_command_service.cpp  test_mission_load_adapter.cpp  test_mission_plan_bridge.cpp  test_mission_plan_store.cpp  test_mission_runtime_state.cpp  test_network_config.cpp  test_no_fly_zone_rules.cpp  test_planning_state_machine.cpp  test_reliable_command_client.cpp  test_repository_paths.cpp  test_route_validator.cpp  test_route_visualizer.cpp  test_zmq_command_client.cpp  test_zmq_command_client_integration.cpp  test_zmq_subscriber_worker.cpp
proto/: messages.proto
shared/cpp/: CMakeLists.txt  README.md
shared/cpp/src/mission/: case_loader.cpp  mission_plan_store.cpp  mission_planning.cpp
shared/cpp/src/planning/: mission_geometry.cpp  route_cost.cpp  route_planner.cpp
shared/cpp/src/protocol/: command_handler.cpp  competition_command_handler.cpp  envelope_builder.cpp  envelope_codec.cpp
shared/cpp/src/runtime/: simulator.cpp
shared/cpp/src/storage/: json_codec.cpp
shared/cpp/tests/: capture_planner_golden.py  test_h_case_loader.cpp  test_h_command_handler.cpp  test_h_envelope_builder.cpp  test_h_mission_geometry.cpp  test_h_mission_plan_store.cpp  test_h_planning_result.cpp  test_h_route_planner.cpp  test_h_route_planner_cli.cpp  test_h_simulator.cpp  test_json_codec.cpp  test_task_ports.cpp  test_task_protocol.cpp  verify_planner_golden.py
shared/cpp/tools/: generate_h_runtime_fixture.cpp  h_route_planner_cli_main.cpp
web_ground_station/: README.md  pyproject.toml
web_ground_station/config/: mediamtx.yml
web_ground_station/frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web_ground_station/frontend/src/: App.vue  main.ts
web_ground_station/gateway/nuedc_web_gateway/: __init__.py  airborne.py  app.py  config.py  emergency_stop.py  models.py  planner.py  proto_runtime.py  recorder.py  state.py  video.py
web_ground_station/scripts/: check_web_ground_station.sh  deployment_manifest.py  generate_python_proto.py  install_mediamtx.sh  run_mediamtx.sh  start_competition.sh  start_dev.sh  verify_cross_repo_manifest_contract.sh
web_ground_station/scripts/tests/: test_run_mediamtx.sh
web_ground_station/tests/: test_cross_repo_manifest_contract.sh  test_scripts.sh
web_ground_station/tests/e2e/: fixtures.ts  layout.spec.ts  mission-flow.spec.ts  raw-video.spec.ts
web_ground_station/tests/gateway/: test_airborne.py  test_app.py  test_config.py  test_deployment_manifest.py  test_emergency_stop.py  test_planner.py  test_proto_runtime.py  test_recorder.py  test_state.py  test_video.py
(+164 files in other folders)
