[project]
name = "nuedc-web-ground-station"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.30,<1",
  "pyzmq>=22,<27",
  "protobuf>=3.20,<4",
]

[dependency-groups]
dev = ["httpx>=0.27,<1", "pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
pythonpath = ["gateway"]
asyncio_mode = "auto"
