<?xml version="1.0"?>
<package format="3">
  <name>nuedc_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge between NUEDC ground-station protobuf/ZMQ protocol and onboard perception topics.</description>
  <maintainer email="sb@example.com">sb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>Protobuf</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
